--- a/SNMP2/src/main/java/GUISNMP/ClientSNMP.form
+++ b/SNMP2/src/main/java/GUISNMP/ClientSNMP.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panelPrincipale" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="851" height="400"/>
+      <xy x="20" y="20" width="984" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -48,7 +48,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="cb9fa" class="javax.swing.JButton" binding="paramètreAvancéButton" default-binding="true">
+          <component id="cb9fa" class="javax.swing.JButton" binding="parametreAvanceButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
